tests/Rules/Forms/Fixtures/invalid/select_no_label.html.twig
{# 1 errors #}
<select><option>1</option></select>
